# cli-panda

./: .dockerignore  .gitignore  CLAUDE.md  COMMIT_REVIEW_REPORT.md  Dockerfile  README.md  RELEASE_PLAN.md  install-all.sh  install.sh  panda  pyproject.toml  requirements.txt  setup-aliases.sh  test_all.py
PostDevAi/: pyproject.toml
PostDevAi/src/: lib.rs
ai-terminal/: .env.example  README.md  install.sh  package-lock.json  package.json
ai-terminal/config/: default.json
ai-terminal/src/: index.ts
ai-terminal/src/core/: lm-adapter.ts  lmstudio.ts
ai-terminal/zsh-components/: completions.zsh  init.zsh  keybindings.zsh
cli/: cli_panda.py  model_manager.py  pyproject.toml
lbrxchat/: lmstudio_test.py  pyproject.toml  requirements.txt
lbrxchat/examples/: mlx_vet_rag_tui.py
lbrxchat/lbrxchat/: __main__.py  tui.py
lbrxchat/lbrxchat/core/: models.py  rag.py
lbrxchat/lbrxchat/tools/: build_index.py
lbrxchat/lbrxchat/ui/: styles.css  tui.py
